--- a/recepty.html
+++ b/recepty.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recepty pro každého</title>
+    <title>Recepty.cz</title>
     <link rel="stylesheet" href="stylovani.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1 class="logo">Recepty.cz</h1>
+            <nav>
+                <ul class="nav-list">
+                    <li>Domů</a></li>
+                    <li>Recepty</a></li>
+                    <li>O nás</a></li>
+                    <li>Kontakt</a></li>
+                </ul>
+            </nav>
+        </div>   
+    </header>
+
+
 
 </body>
 </html>
