--- a/recepty.html
+++ b/recepty.html
@@ -21,6 +21,16 @@
         </div>   
     </header>
 
+    <section class="hero">
+        <div class="hero_section">
+            <h2>Najdeš zde vše co potřebuješ</h2>
+            <p>Vyhledej na co máš zrovna chuť</p>
+            <form action="#" class="search_box">
+                <input type="text" placeholder="Vyhledej recept">
+                <button type="click">Hledat</button>
+            </form>
+        </div>
+    </section>
 
 
 </body>
