--- a/recepty.html
+++ b/recepty.html
@@ -32,6 +32,36 @@
         </div>
     </section>
 
+    <section class="recipes">
+        <h1>Doporučené recepty</h1>
+        <div class="recipe_section">
+            <div class="recipe_card">
+                <img src="img/Chicken-with-Coconut-Kale-Sauce.jpg">
+                <h2>Kuře s kokosovou omáčkou</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <a href="#">Ukázat recept</a>
+            </div>
+            <div class="recipe_card">
+                <img src="img/Ginger-Peanut-Chicken-1.jpg">
+                <h2>Zázvorově-arašídové kuře</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <a href="#">Ukázat recept</a>
+            </div>
+            <div class="recipe_card">
+                <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
+                <h2>Křupavé kočchudžang kuře</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <a href="#">Ukázat recept</a>
+            </div>
+            <div class="recipe_card">
+                <img src="img/Crispy-Rice-Salad-4.jpg">
+                <h2>Křupavý rýžový salát</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <a href="#">Ukázat recept</a>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
