--- a/recepty.html
+++ b/recepty.html
@@ -27,7 +27,7 @@
             <p>Vyhledej na co máš zrovna chuť</p>
             <form action="#" class="search_box">
                 <input type="text" placeholder="Vyhledej recept">
-                <button type="click">Hledat</button>
+                <button type="submit">Hledat</button>
             </form>
         </div>
     </section>
@@ -38,25 +38,25 @@
             <div class="recipe_card">
                 <img src="img/Chicken-with-Coconut-Kale-Sauce.jpg">
                 <h2>Kuře s kokosovou omáčkou</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Příprava: 20 min | Vaření: 50 min</p>
                 <a href="#">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Ginger-Peanut-Chicken-1.jpg">
                 <h2>Zázvorově-arašídové kuře</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Příprava: 30 min | Vaření: 45 min</p>
                 <a href="#">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
                 <h2>Křupavé kočchudžang kuře</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Příprava: 20 min | Vaření: 45 min</p>
                 <a href="#">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Crispy-Rice-Salad-4.jpg">
                 <h2>Křupavý rýžový salát</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                <p>Příprava: 15 min | Vaření: 25 min</p>
                 <a href="#">Ukázat recept</a>
             </div>
         </div>
