About and mini changes with header and hero

--- a/recepty.html
+++ b/recepty.html
@@ -12,19 +12,20 @@
             <h1 class="logo">Recepty.cz</h1>
             <nav>
                 <ul class="nav-list">
-                    <li>Domů</a></li>
-                    <li>Recepty</a></li>
-                    <li>O nás</a></li>
-                    <li>Kontakt</a></li>
+                    <li><a href="#">Domů</a></li>
+                    <li><a href="#recipes">Recepty</a></li>
+                    <li><a href="#about">O nás</a></li>
+                    <li><a href="#">Kontakt</a></li>
                 </ul>
             </nav>
         </div>   
     </header>
 
     <section class="hero">
+        <div class="overlay"></div>
         <div class="hero_section">
-            <h2>Najdeš zde vše co potřebuješ</h2>
-            <p>Vyhledej na co máš zrovna chuť</p>
+            <h2>Najdeš zde, vše co potřebuješ</h2>
+            <p>Vyhledej, na co máš zrovna chuť</p>
             <form action="#" class="search_box">
                 <input type="text" placeholder="Vyhledej recept">
                 <button type="submit">Hledat</button>
@@ -32,7 +33,7 @@
         </div>
     </section>
 
-    <section class="recipes">
+    <section class="recipes" id="recipes">
         <h1>Doporučené recepty</h1>
         <div class="recipe_section">
             <div class="recipe_card">
@@ -62,6 +63,18 @@
         </div>
     </section>
 
-
+     <section class="about" id="about">
+        <h1>O nás</h1>
+        <div class="container">
+            <p>
+                Vítej na stránce Recepty.cz! Jsme nadšenci do vaření, pečení a objevování nových chutí. Naším cílem je sdílet recepty, které jsou chutné, jednoduché a ověřené. 
+                <br><br>
+                Naše komunita se skládá z domácích kuchařů i profesionálů, kteří mají jedno společné - lásku k jídlu. Ať už hledáš inspiraci na rychlou večeři nebo gurmánské překvapení pro návštěvu, u nás najdeš vše potřebné.
+                <br><br>
+                Děkujeme, že vaříš s námi!
+            </p>
+        </div>
+    </section>
+    
 </body>
 </html>
