--- a/recepty.html
+++ b/recepty.html
@@ -15,7 +15,7 @@
                     <li><a href="#">Domů</a></li>
                     <li><a href="#recipes">Recepty</a></li>
                     <li><a href="#about">O nás</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
         </div>   
@@ -65,7 +65,7 @@
 
      <section class="about" id="about">
         <h1>O nás</h1>
-        <div class="container">
+        <div class="about_section">
             <p>
                 Vítej na stránce Recepty.cz! Jsme nadšenci do vaření, pečení a objevování nových chutí. Naším cílem je sdílet recepty, které jsou chutné, jednoduché a ověřené. 
                 <br><br>
@@ -75,6 +75,20 @@
             </p>
         </div>
     </section>
+
+    <section class="contact" id="contact">
+        <h1>Kontakt</h1>
+        <div class="contact_section">
+            <p>
+                Rádi se s vámi spojíme! Pokud máte jakékoli dotazy nebo potřebujete pomoc, neváhejte nás kontaktovat:
+                <br><br>
+                <strong>Email:</strong> info@recepty.cz
+                <br><br>
+                <strong>Telefon:</strong> +420 123 456 789
+            </p>
+        </div>
+    </section>
+
     
 </body>
 </html>
