--- a/recepty.html
+++ b/recepty.html
@@ -82,7 +82,7 @@
             <p>
                 Rádi se s vámi spojíme! Pokud máte jakékoli dotazy nebo potřebujete pomoc, neváhejte nás kontaktovat:
                 <br><br>
-                <strong>Email:</strong> info@recepty.cz
+                <strong>E-mail:</strong> info@recepty.cz
                 <br><br>
                 <strong>Telefon:</strong> +420 123 456 789
             </p>
