mistake in main text

--- a/recepty.html
+++ b/recepty.html
@@ -24,7 +24,7 @@
     <section class="hero">
         <div class="overlay"></div>
         <div class="hero_section">
-            <h2>Najdeš zde, vše co potřebuješ</h2>
+            <h2>Najdeš zde vše, co potřebuješ</h2>
             <p>Vyhledej, na co máš zrovna chuť</p>
             <form action="#" class="search_box">
                 <input type="text" placeholder="Vyhledej recept">
