single recipe page

--- a/recepty.html
+++ b/recepty.html
@@ -40,25 +40,25 @@
                 <img src="img/Chicken-with-Coconut-Kale-Sauce.jpg">
                 <h2>Kuře s kokosovou omáčkou</h2>
                 <p>Příprava: 20 min | Vaření: 50 min</p>
-                <a href="#">Ukázat recept</a>
+                <a href="1_recipe.html">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Ginger-Peanut-Chicken-1.jpg">
                 <h2>Zázvorově-arašídové kuře</h2>
                 <p>Příprava: 30 min | Vaření: 45 min</p>
-                <a href="#">Ukázat recept</a>
+                <a href="2_recipe.html">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
                 <h2>Křupavé kočchudžang kuře</h2>
                 <p>Příprava: 20 min | Vaření: 45 min</p>
-                <a href="#">Ukázat recept</a>
+                <a href="3_recipe.html">Ukázat recept</a>
             </div>
             <div class="recipe_card">
                 <img src="img/Crispy-Rice-Salad-4.jpg">
                 <h2>Křupavý rýžový salát</h2>
                 <p>Příprava: 15 min | Vaření: 25 min</p>
-                <a href="#">Ukázat recept</a>
+                <a href="4_recipe.html">Ukázat recept</a>
             </div>
         </div>
     </section>
