header and background

--- a/1_recipe.html
+++ b/1_recipe.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recepty.cz</title>
-    <link rel="stylesheet" href="1_recept_styl.css">
+    <link rel="stylesheet" href="recipe_style.css">
+    <link rel="stylesheet" href="stylovani.css">
 </head>
-    <body>
-    </body>
+<body>
+    <div class="overlay"></div>
+    <header>
+    <div class="container">
+        <h1 class="logo"><a href="recepty.html#">Recepty.cz</a></h1>
+        <nav>
+            <ul class="nav-list">
+                <li><a href="recepty.html#">Domů</a></li>
+                <li><a href="recepty.html#recipes">Recepty</a></li>
+                <li><a href="recepty.html#about">O nás</a></li>
+                <li><a href="recepty.html#contact">Kontakt</a></li>
+            </ul>
+        </nav>
+    </div>   
+    </header>   
+</body>
 </html>
