--- a/recepty.html
+++ b/recepty.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">Recepty.cz</h1>
+            <h1 class="logo"><a href="#">Recepty.cz</a></h1>
             <nav>
                 <ul class="nav-list">
                     <li><a href="#">Domů</a></li>
