specific recipe page

--- a/3_recipe.html
+++ b/3_recipe.html
@@ -22,5 +22,38 @@
         </nav>
     </div>   
     </header>
+
+    <section class="recipe_info">
+        <div class="recipe_img">
+            <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
+        </div>
+        <div class="recipe_text">
+            <h1>Křupavé kočchudžang kuře</h1>
+            <div class="recipe_columns">
+                <div class="ingredients">
+                    <h2>Suroviny</h2>   
+                    <ul>
+                        <li>4 kuřecí prsa</li>
+                        <li>1 cibule</li>
+                        <li>200 ml kokosového mléka</li>
+                        <li>2 hrsti kapusty</li>
+                        <li>Sůl a pepř</li>
+                        <li>Olej na smažení</li>
+                        
+                    </ul>
+                </div>
+                <div class="instructions">
+                    <h2>Postup</h2>
+                    <ol>
+                        <li>Na pánvi rozehřej olej a osmaž cibuli.</li>
+                        <li>Přidej nakrájená kuřecí prsa a opeč je dozlatova.</li>
+                        <li>Zalij kokosovým mlékem a přidej kapustu.</li>
+                        <li>Osol, opepři a nech dusit 10 minut.</li>
+                        <li>Podávej s rýží nebo chlebem.</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
