second recipe text changes

--- a/1_recipe.html
+++ b/1_recipe.html
@@ -45,11 +45,11 @@
                 <div class="instructions">
                     <h2>Postup</h2>
                     <ol>
-                        <li>Na pánvi rozehřej olej a osmaž cibuli.</li>
-                        <li>Přidej nakrájená kuřecí prsa a opeč je dozlatova.</li>
-                        <li>Zalij kokosovým mlékem a přidej kapustu.</li>
-                        <li>Osol, opepři a nech dusit 10 minut.</li>
-                        <li>Podávej s rýží nebo chlebem.</li>
+                        <li>Na pánvi rozehřej olej a osmaž cibuli</li>
+                        <li>Přidej nakrájená kuřecí prsa a opeč dozlatova</li>
+                        <li>Zalij kokosovým mlékem a přidej kapustu</li>
+                        <li>Osol, opepři a nech dusit 10 minut</li>
+                        <li>Podávej s rýží nebo chlebem</li>
                     </ol>
                 </div>
             </div>
