--- a/2_recipe.html
+++ b/2_recipe.html
@@ -33,11 +33,11 @@
                 <div class="ingredients">
                     <h2>Suroviny</h2>   
                     <ul>
-                        <li>4 kuřecí prsa</li>
-                        <li>1 cibule</li>
-                        <li>200 ml kokosového mléka</li>
-                        <li>2 hrsti kapusty</li>
-                        <li>Sůl a pepř</li>
+                        <li>400 g kuřecích prsou (na nudličky)</li>
+                        <li>Čerstvý zázvor</li>
+                        <li>2 stroužky česneku</li>
+                        <li>Arašídové máslo hladké</li>
+                        <li>Sójová omáčka</li>
                         <li>Olej na smažení</li>
                         
                     </ul>
@@ -45,11 +45,12 @@
                 <div class="instructions">
                     <h2>Postup</h2>
                     <ol>
-                        <li>Na pánvi rozehřej olej a osmaž cibuli.</li>
-                        <li>Přidej nakrájená kuřecí prsa a opeč je dozlatova.</li>
-                        <li>Zalij kokosovým mlékem a přidej kapustu.</li>
-                        <li>Osol, opepři a nech dusit 10 minut.</li>
-                        <li>Podávej s rýží nebo chlebem.</li>
+                        <li>Na pánvi osmahni česnek a zázvor</li>
+                        <li>Přidej kuřecí maso a opeč ho dozlatova</li>
+                        <li>V malé misce rozmíchej arašídové máslo se sójovou omáčkou</li>
+                        <li>Omáčku přidej k masu a nechej 2-3 minuty</li>
+                        <li>Podávej s rýží</li>
+                        
                     </ol>
                 </div>
             </div>
