third and fourth recipe

--- a/4_recipe.html
+++ b/4_recipe.html
@@ -33,11 +33,12 @@
                 <div class="ingredients">
                     <h2>Suroviny</h2>   
                     <ul>
-                        <li>4 kuřecí prsa</li>
-                        <li>1 cibule</li>
-                        <li>200 ml kokosového mléka</li>
-                        <li>2 hrsti kapusty</li>
-                        <li>Sůl a pepř</li>
+                        <li>1 hrnek vařené rýže</li>
+                        <li>1 mrkev</li>
+                        <li>1/2 okurky</li>
+                        <li>Jarní cibulka</li>
+                        <li>Arašídy</li>
+                        <li>Sójová omáčka</li>
                         <li>Olej na smažení</li>
                         
                     </ul>
@@ -45,11 +46,11 @@
                 <div class="instructions">
                     <h2>Postup</h2>
                     <ol>
-                        <li>Na pánvi rozehřej olej a osmaž cibuli.</li>
-                        <li>Přidej nakrájená kuřecí prsa a opeč je dozlatova.</li>
-                        <li>Zalij kokosovým mlékem a přidej kapustu.</li>
-                        <li>Osol, opepři a nech dusit 10 minut.</li>
-                        <li>Podávej s rýží nebo chlebem.</li>
+                        <li>Opeč rýži dozlatova a dokřupava</li>
+                        <li>V míse smíchej nastrouhanou mrkev, okurku a jarní cibulku</li>
+                        <li>Přidej křupavou rýži a promíchej</li>
+                        <li>Zakápni sójovou omáčkou a limetkovou šťávou</li>
+                        <li>Posyp nasekanými oříšky a ihned podávej</li>
                     </ol>
                 </div>
             </div>
