--- a/recepty.html
+++ b/recepty.html
@@ -50,7 +50,7 @@
             </div>
             <div class="recipe_card">
                 <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
-                <h2>Křupavé kočchudžang kuře</h2>
+                <h2>Korejské smažené kuře</h2>
                 <p>Příprava: 20 min | Vaření: 45 min</p>
                 <a href="3_recipe.html">Ukázat recept</a>
             </div>
