--- a/3_recipe.html
+++ b/3_recipe.html
@@ -28,28 +28,27 @@
             <img src="img/Crispy-Gochujang-Chicken-1-5-scaled.jpg">
         </div>
         <div class="recipe_text">
-            <h1>Křupavé kočchudžang kuře</h1>
+            <h1>Korejské smažené kuře</h1>
             <div class="recipe_columns">
                 <div class="ingredients">
                     <h2>Suroviny</h2>   
                     <ul>
-                        <li>4 kuřecí prsa</li>
-                        <li>1 cibule</li>
-                        <li>200 ml kokosového mléka</li>
-                        <li>2 hrsti kapusty</li>
-                        <li>Sůl a pepř</li>
-                        <li>Olej na smažení</li>
-                        
+                        <li>500 g kuřecích stehen (na kousky)</li>
+                        <li>1 vejce</li>
+                        <li>3 lžíce škrobu</li>
+                        <li>korejská chilli pasta (gochujang)</li>
+                        <li>Sójová omáčka</li>
+                        <li>Olej na smažení</li>                       
                     </ul>
                 </div>
                 <div class="instructions">
                     <h2>Postup</h2>
                     <ol>
-                        <li>Na pánvi rozehřej olej a osmaž cibuli.</li>
-                        <li>Přidej nakrájená kuřecí prsa a opeč je dozlatova.</li>
-                        <li>Zalij kokosovým mlékem a přidej kapustu.</li>
-                        <li>Osol, opepři a nech dusit 10 minut.</li>
-                        <li>Podávej s rýží nebo chlebem.</li>
+                        <li>Kuře obal ve vejci a škrobu, osol a opepři</li>
+                        <li>Smaž dozlatova</li>
+                        <li>Smíchej gochujang, sójovku a med, krátce povař</li>
+                        <li>Kuře obal v hotové omáčce</li>
+                        <li>Podávej horké, ideálně s rýží</li>
                     </ol>
                 </div>
             </div>
