--- a/recepty.html
+++ b/recepty.html
@@ -26,9 +26,15 @@
         <div class="hero_section">
             <h2>Najdeš zde vše, co potřebuješ</h2>
             <p>Vyhledej, na co máš zrovna chuť</p>
-            <form action="#" class="search_box">
-                <input type="text" placeholder="Vyhledej recept">
-                <button type="submit">Hledat</button>
+            <form action="#recipes" class="search_box">
+                <input type="search" list="input" placeholder="Vyhledej recept">
+                <datalist id="input">
+                    <option value="Kuře s kokosovou omáčkou"></option>
+                    <option value="Zazvorově-arašídové kuře"></option>
+                    <option value="Korejské smažené kuře"></option>
+                    <option value="Křupavý rýžový salát"></option>
+                </datalist>
+                <button type="submit">Hledat</button>   
             </form>
         </div>
     </section>
