--- a/1_recipe.html
+++ b/1_recipe.html
@@ -11,10 +11,10 @@
     <div class="overlay"></div>
     <header>
     <div class="container">
-        <h1 class="logo"><a href="recepty.html#">Recepty.cz</a></h1>
+        <h1 class="logo"><a href="recepty.html">Recepty.cz</a></h1>
         <nav>
             <ul class="nav-list">
-                <li><a href="recepty.html#">Domů</a></li>
+                <li><a href="recepty.html">Domů</a></li>
                 <li><a href="recepty.html#recipes">Recepty</a></li>
                 <li><a href="recepty.html#about">O nás</a></li>
                 <li><a href="recepty.html#contact">Kontakt</a></li>
