--- a/4_recipe.html
+++ b/4_recipe.html
@@ -6,6 +6,7 @@
     <title>Recepty.cz</title>
     <link rel="stylesheet" href="recipe_style.css?v=1">
     <link rel="stylesheet" href="stylovani.css">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
 </head>
 <body>
     <div class="overlay"></div>
